Implemented MedicalRecordController and FirestationController tests + documentation on person controller